<resources>
    <string name="app_name">Mental Health App</string>

    //HomeScreen
    <string name="create_account_button">Create Account</string>
    <string name="login_button">Log In</string>
    <string name="logo_description">Home Screen logo</string>

    //CreateAccount
    <string name="sign_up_button">Sign Up</string>
    <string name="sign_up_with">or sign up with</string>
    <string name="google_signin_button">Google</string>
    <string name="facebook_signin_button">Facebook</string>
    <string name="terms_and_conditions">I have read, understood, and accept the Terms and Conditions</string>
    <string name="data_collection">I agree on the use of my personal data</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="facebook_app_id">658893611388554</string>
    <string name="fb_login_protocol_scheme">fb658893611388554</string>
    <string name="upload_text">Upload License</string>


    //Profile
    <string name="display_name_value_placeholder">DISPLAY_NAME</string>
    <string name="upload_photo">+ Upload Photo</string>
    <string name="save_photo">Save Changes</string>
    <string name="personal_details">Personal Details</string>
    <string name="first_name">First Name:</string>
    <string name="first_name_value_placeholder">FIRST_NAME</string>
    <string name="last_name">Last Name:</string>
    <string name="last_name_value_placeholder">LAST_NAME</string>
    <string name="contact_details">Contact Details</string>
    <string name="mobile_number">Mobile Number:</string>
    <string name="mobile_number_placeholder">123-456-78</string>
    <string name="email">Email:</string>
    <string name="email_placeholder">abc@123.com</string>
    <string name="sign_out">Sign Out</string>
    <string name="view_details">View Details</string>
    <string name="consultation_history">Consultation History</string>
    <string name="no_record_found">0 record(s) Found</string>

    //List of Patient Appointments
    <string name="view_list_of_appointments">View list of appointments</string>
    <string name="patient_list_date_placeholder">DATE_TODAY</string>
    <string name="patient_display_name_placeholder">DISPLAY_NAME</string>
    <string name="patient_appointment_time_placeholder">12:00 AM</string>
    <string name="patient_view_profile">View Profile</string>
    <string name="meet">Join Room</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
