<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/patient_photo"
            android:layout_width="30dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:padding="10dp"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/patient_display_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/patient_display_name_placeholder" />

            <TextView
                android:id="@+id/patient_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/patient_appointment_time_placeholder" />

            <TextView
                android:id="@+id/view_patient_profile_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/patient_view_profile"
                android:clickable="true"
                android:focusable="true"
                android:textColor="@android:color/primary_text_light" />
        </LinearLayout>

        <Button
            android:id="@+id/meet_btn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:visibility="gone"
            android:layout_marginRight="10dp"
            android:background="@android:color/holo_green_light"
            android:textColor="@android:color/white"
            android:text="@string/meet" />

        <Button
            android:id="@+id/view_appointment_details_btn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:text="@string/view_details" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>